force-app/main/default/objects/Twilio_Config__c/Twilio_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Twilio Config</label>
</CustomObject>