force-app/main/default/objects/Twilio_Config__c/fields/Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token__c</fullName>
    <label>Auth Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>