force-app/main/default/objects/Twilio_Config__c/fields/Messaging_Service_SID__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Service_SID__c</fullName>
    <label>Messaging Service SID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>